fix: fix goreleaser brew stage

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -55,7 +55,7 @@ brews:
       owner: b4nst
       name: homebrew-tap
       branch: "icmperf-{{ .Version }}"
-      token: "{{ .Env.BREW_TAP_TOKEN }}"
+      token: "{{ .Env.GITHUB_TAP_TOKEN }}"
       pull_request:
         enabled: true
         base:
