build: use Formula directory for brew tap

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -56,6 +56,7 @@ brews:
       name: homebrew-tap
       branch: "icmperf-{{ .Version }}"
       token: "{{ .Env.GITHUB_TAP_TOKEN }}"
+      directory: Formula
       pull_request:
         enabled: true
         base:
